--- a/portfolio-client/package.json
+++ b/portfolio-client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-client",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -33,6 +33,5 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  },
-  "proxy": "https://localhost:5000"
+  }
 }
