--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -27,18 +27,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-      - name: Change Directory to portfolio-client
-        run: cd portfolio-client
-      
+
       - name: Detect package manager
         id: detect-package-manager
         run: |
-          if [ -f "yarn.lock" ]; then
+          if [ -f "portfolio-client/yarn.lock" ]; then
             echo "manager=yarn" >> $GITHUB_OUTPUT
             echo "command=install" >> $GITHUB_OUTPUT
             echo "runner=yarn" >> $GITHUB_OUTPUT
-          elif [ -f "package.json" ]; then
+          elif [ -f "portfolio-client/package.json" ]; then
             echo "manager=npm" >> $GITHUB_OUTPUT
             echo "command=ci" >> $GITHUB_OUTPUT
             echo "runner=npx --no-install" >> $GITHUB_OUTPUT
@@ -46,14 +43,13 @@ jobs:
             echo "Unable to determine package manager"
             exit 1
           fi
-          
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
-        working-directory: ./portfolio-client
-      
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
@@ -63,20 +59,19 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            .next/cache
+            portfolio-client/.next/cache
           key: ${{ runner.os }}-nextjs-${{ hashFiles('portfolio-client/**/package-lock.json', 'portfolio-client/**/yarn.lock') }}-${{ hashFiles('portfolio-client/**.[jt]s', 'portfolio-client/**.[jt]sx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('portfolio-client/**/package-lock.json', 'portfolio-client/**/yarn.lock') }}-
-        working-directory: ./portfolio-client
-      
+
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
         working-directory: ./portfolio-client
-      
+
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
         working-directory: ./portfolio-client
-      
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
